# nlp_proj_2023

./: .gitignore  Proposals.md  README.md  pyproject.toml  requirements.txt
doc/: proposal.md
scripts/: alien.txt  batman.txt  toy_story.txt
sentiment/: predicted_genres.csv  predicted_genres_all-mpnet-base-v2.csv  predicted_genres_multi-qa-mpnet-base-dot-v1.csv
src/: main.py  utils.py
src/dataset_preparaion/: characters_cleaning.py  data_prep_pipeline.sh  description_cleaning.py  html_tags_cleaning.py  labels_cleaning.py  merge.py  names_cleaning.py  pipeline.py  punctuation_cleaning.py  pure_text_separation.py  single_character_cleaning.py  special_cases_cleaning.py  stemming.py  stopwards_removal.py
src/dataset_preparation/: characters_cleaning.py  data_prep_pipeline.sh  merge.py  names_cleaning.py  pure_text_separation.py  stemming.py  stopwords_removal.py
src/scraping/: dailyscript.py  imsdb.py
src/sentence_transformer_model/: conver_all_embeddings.sh  convert_all_embeddings.sh  dataset_split.py  embeddings.py  evaluation.py  genres.py  labels.py  prediction.py  sentiment_analysis.py  training.py
src/statistical_model/: dataset_split.py  evaluation.py  genres.py  inference.py  prediction.py  training.py
src/visualization/: app.py
