[tool.poetry]
name = "nlp-proj-2023"
version = "0.1.0"
description = ""
authors = ["Johannes Pesenhofer <johannes.pesenhofer@student.tugraz.at>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"
w3lib = "^2.1.1"
extruct = "^0.14.0"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
