[tool.poetry]
name = "nlp-proj-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.0"
w3lib = "^2.1.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
tqdm = "^4.65.0"
nltk = "^3.8.1"
scrapy = "^2.8.0"
pyarrow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
