[tool.poetry]
name = "nlp-proj-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
scrapy = "^2.8.0"
pandas = "^1.5.3"
beautifulsoup4 = "^4.12.0"
sentence-transformers = "^2.2.2"
tensorflow = "^2.12.0"
dash = "^2.10.2"
plotly = "^5.15.0"
dash-bootstrap-components = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
